--- a/scss/style.scss
+++ b/scss/style.scss
@@ -87,10 +87,10 @@ body {
             cursor: pointer;
 
             &.close {
-                transform: translateY(180%) rotate(180deg);
+                transform: translateY(125%) rotate(180deg);
 
                 .line:nth-of-type(1) {
-                    transform: rotate(45deg) translate(14px, 14px);
+                    transform: rotate(45deg) translate(7px, 6px);
                 }
 
                 .line:nth-of-type(2) {
@@ -98,7 +98,7 @@ body {
                 }
 
                 .line:nth-of-type(3) {
-                    transform: rotate(-45deg);
+                    transform: rotate(-45deg) translate(8px, -6px);
                 }
             }
 
@@ -121,7 +121,7 @@ body {
             position: absolute;
             right: 10px;
             bottom: 50px;
-            z-index: 1;
+            z-index: 0;
         }
 
         .request-container {
